# support-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
config/: knowledge.md  settings-template.yaml
scripts/: add_contact.py  list_recent_messages.py  setup_whatsapp.py  show_qr.py  start_all_channels.sh
src/support_agent/: __init__.py  config.py  main.py  main_all_channels.py
src/support_agent/channels/: __init__.py  base.py  web.py  whatsapp.py
src/support_agent/core/: __init__.py  agent.py  message.py
src/support_agent/llm/: __init__.py  base.py  factory.py  ollama.py  openai.py
src/support_agent/security/: __init__.py  whitelist.py
src/support_agent/tools/: __init__.py  base.py  registry.py
src/support_agent/tools/builtin/: __init__.py  database.py  remote_server.py  server_ssh.py  system_status.py
src/support_agent/utils/: logging.py
src/support_agent/voice/: __init__.py  transcriber.py
src/support_agent/web/: __init__.py  server.py
src/support_agent/web/templates/: chat.html
